package com.powersense.analytics.alerts.domain.model.valueobjects;

public enum AlertSeverity {
    INFO,
    WARNING,
    ERROR,
    CRITICAL
}
