package com.powersense.analytics.alerts.domain.model.valueobjects;

public enum AlertType {
    HIGH_CONSUMPTION,
    LOW_EFFICIENCY,
    DEVICE_OFFLINE,
    SCHEDULE_CONFLICT,
    THRESHOLD_EXCEEDED,
    CUSTOM
}
